--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "{{ name }}",
+  "name": "startpage",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -16,13 +16,17 @@
     "build/*"
   ],
   "devDependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "babel-loader": "^8.2.2",
+    "babel-preset-preact": "^2.0.0",
     "eslint": "^7.17.0",
     "eslint-config-preact": "^1.1.3",
     "preact-cli": "^3.0.0",
     "sirv-cli": "^1.0.3"
   },
   "dependencies": {
-    "preact": "^10.1.0",
-    "preact-render-to-string": "^5.1.2"
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.18",
+    "preact-router": "^3.2.1"
   }
 }
